tests/integration/fixtures/sample_org/objects/Trigger_Action__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>