tests/integration/fixtures/sample_org/objects/Trigger_Action__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>