tests/integration/fixtures/sample_org/objects/Trigger_Action__mdt/fields/Trigger_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event__c</fullName>
    <label>Trigger Event</label>
    <length>40</length>
    <type>Text</type>
</CustomField>